@@ -1,7 +1,8 @@
-toolsets = gnu gnu-osx gnu-suncc vs2008 vs2010 vs2012 vs2013;
+toolsets = gnu gnu-osx gnu-suncc vs2008 vs2010 vs2012 vs2013 vs2015;
 
 vs2012.solutionfile = hello_world_vs2012.sln;
 vs2013.solutionfile = hello_world_vs2013.sln;
+vs2015.solutionfile = hello_world_vs2015.sln;
 vs2008.solutionfile = hello_world_vs2008.sln;
 
 program hello {
@@ -11,4 +12,5 @@ program hello {
 
     vs2012.projectfile = hello_vs2012.vcxproj;
     vs2013.projectfile = hello_vs2013.vcxproj;
+    vs2015.projectfile = hello_vs2015.vcxproj;
 }
