@@ -1,8 +1,9 @@
 module {
   variables {
-    toolsets = [gnu, gnu-osx, gnu-suncc, vs2008, vs2010, vs2012, vs2013]
+    toolsets = [gnu, gnu-osx, gnu-suncc, vs2008, vs2010, vs2012, vs2013, vs2015]
     vs2012.solutionfile = @top_srcdir/hello_world_vs2012.sln
     vs2013.solutionfile = @top_srcdir/hello_world_vs2013.sln
+    vs2015.solutionfile = @top_srcdir/hello_world_vs2015.sln
     vs2008.solutionfile = @top_srcdir/hello_world_vs2008.sln
   }
   targets {
@@ -11,6 +12,7 @@ module {
       defines = [SALUTATION="Hello"]
       vs2012.projectfile = @top_srcdir/hello_vs2012.vcxproj
       vs2013.projectfile = @top_srcdir/hello_vs2013.vcxproj
+      vs2015.projectfile = @top_srcdir/hello_vs2015.vcxproj
       sources {
         file @top_srcdir/hello.c
       }
